--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
     "gulp-svg-sprite": "^1.5.0",
-    "gulp-uglify": "^3.0.1",
+    "gulp-uglify-es": "^2.0.0",
     "gulp-useref": "^3.1.6",
     "gulp-watch": "^5.0.1"
   }
